--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "finology",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mehdiparastar.github.io",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "clsx": "^1.1.1",
+    "gh-pages": "^3.2.3",
     "material-ui-image": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +34,9 @@
     "eject": "react-scripts eject",
     "prettier:fix": "prettier './src/**/*.js' --write",
     "eslint:fix": "eslint ./src --fix",
-    "clear-all": "rimraf ./build ./node_modules"
+    "clear-all": "rimraf ./build ./node_modules",
+    "deploy":"gh-pages -d build",
+    "predeploy":"npm run build"
   },
   "eslintConfig": {
     "extends": [
