--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "clsx": "^1.1.1",
-    "gh-pages": "^3.2.3",
     "material-ui-image": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +26,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "start-node17": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
@@ -34,9 +35,7 @@
     "eject": "react-scripts eject",
     "prettier:fix": "prettier './src/**/*.js' --write",
     "eslint:fix": "eslint ./src --fix",
-    "clear-all": "rimraf ./build ./node_modules",
-    "deploy":"gh-pages -d build",
-    "predeploy":"npm run build"
+    "clear-all": "rimraf ./build ./node_modules"
   },
   "eslintConfig": {
     "extends": [
@@ -65,5 +64,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
